--- a/proj2.ipynb
+++ b/proj2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "28411ed4-1662-4143-ba08-a75dd7f8ce0c",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a9e60f7a-af43-4267-b6f7-d93773c47ffa",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "0e29da01-6b62-47ef-b0e5-d98a44c3a4c7",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "9956110d-e42d-42ef-95af-478f6e79ee19",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "d58c011e-6e1c-46bf-8da3-3056b53bd1ff",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,57 @@
      "output_type": "stream",
      "text": [
       "(1, 32, 32, 3)\n",
-      "(1, 32, 32, 3)\n"
+      "(1, 32, 32, 3)\n",
+      "tf.Tensor(\n",
+      "[[[[-0.28313756  0.08089644  0.20224111]\n",
+      "   [-0.2042561   0.16340488  0.04085122]\n",
+      "   [ 0.34947175  0.11649058 -0.46596232]\n",
+      "   ...\n",
+      "   [ 1.1540048  -0.03036855 -1.1236362 ]\n",
+      "   [ 1.1683812  -0.06069513 -1.107686  ]\n",
+      "   [ 1.145676   -0.049812   -1.095864  ]]\n",
+      "\n",
+      "  [[-0.32200918  0.16100459  0.16100459]\n",
+      "   [ 0.          0.          0.        ]\n",
+      "   [ 0.8546979  -0.06104985 -0.79364806]\n",
+      "   ...\n",
+      "   [ 1.1875043  -0.02305834 -1.164446  ]\n",
+      "   [ 1.1941673  -0.03411906 -1.1600481 ]\n",
+      "   [ 1.2007973  -0.06003987 -1.1407574 ]]\n",
+      "\n",
+      "  [[ 0.20224111  0.08089644 -0.28313756]\n",
+      "   [ 0.80219525 -0.06417562 -0.73801965]\n",
+      "   [ 1.1294703  -0.0537843  -1.0756861 ]\n",
+      "   ...\n",
+      "   [ 1.1761315   0.         -1.1761315 ]\n",
+      "   [ 1.1897933  -0.02244893 -1.1673443 ]\n",
+      "   [ 1.2029538  -0.05839581 -1.144558  ]]\n",
+      "\n",
+      "  ...\n",
+      "\n",
+      "  [[ 1.0593573   0.25424576 -1.313603  ]\n",
+      "   [ 1.0142049   0.33492345 -1.3491282 ]\n",
+      "   [ 0.9368974   0.43931073 -1.3762081 ]\n",
+      "   ...\n",
+      "   [ 1.0113593   0.31118748 -1.3225467 ]\n",
+      "   [ 1.1435853  -0.01545386 -1.1281315 ]\n",
+      "   [ 1.1008589  -0.10585181 -0.9950071 ]]\n",
+      "\n",
+      "  [[ 1.1826591   0.01892255 -1.2015817 ]\n",
+      "   [ 1.1054845   0.18933712 -1.2948216 ]\n",
+      "   [ 0.9939686   0.36144313 -1.3554116 ]\n",
+      "   ...\n",
+      "   [ 1.1094875   0.15849821 -1.2679857 ]\n",
+      "   [ 1.2096715  -0.08640511 -1.1232663 ]\n",
+      "   [ 1.2122005  -0.1687874  -1.043413  ]]\n",
+      "\n",
+      "  [[ 1.1958064  -0.06360672 -1.1321996 ]\n",
+      "   [ 1.2040899  -0.04262265 -1.1614672 ]\n",
+      "   [ 1.1125972   0.15524612 -1.2678434 ]\n",
+      "   ...\n",
+      "   [ 1.1186321   0.12429245 -1.2429245 ]\n",
+      "   [ 1.1688733   0.01168873 -1.180562  ]\n",
+      "   [ 1.2160197  -0.1631246  -1.0528952 ]]]], shape=(1, 32, 32, 3), dtype=float32)\n"
      ]
     }
    ],
@@ -118,7 +168,9 @@
     "\n",
     "\n",
     "print(norm_values1.shape)\n",
-    "print(norm_values2.shape)"
+    "print(norm_values2.shape)\n",
+    "\n",
+    "print(norm_values1)"
    ]
   },
   {
@@ -181,10 +233,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7d359b23-a3a2-42a8-aa94-9f8805e2046c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[[[-0.7613982   0.21754235  0.54385585]\n",
+      "   [-0.5871291   0.4697033   0.11742582]\n",
+      "   [ 0.7702654   0.2567551  -1.0270205 ]\n",
+      "   ...\n",
+      "   [ 1.2311792  -0.03239945 -1.1987802 ]\n",
+      "   [ 1.2463983  -0.06474794 -1.18165   ]\n",
+      "   [ 1.239172   -0.05387745 -1.1852953 ]]\n",
+      "\n",
+      "  [[-0.84083676  0.42041838  0.42041838]\n",
+      "   [ 0.          0.          0.        ]\n",
+      "   [ 1.1977165  -0.08555117 -1.1121653 ]\n",
+      "   ...\n",
+      "   [ 1.2313913  -0.02391051 -1.2074809 ]\n",
+      "   [ 1.2370484  -0.03534424 -1.2017043 ]\n",
+      "   [ 1.2491685  -0.06245843 -1.1867102 ]]\n",
+      "\n",
+      "  [[ 0.54385585  0.21754235 -0.7613982 ]\n",
+      "   [ 1.1857501  -0.09485999 -1.0908899 ]\n",
+      "   [ 1.2392256  -0.05901074 -1.1802148 ]\n",
+      "   ...\n",
+      "   [ 1.2196105   0.         -1.2196106 ]\n",
+      "   [ 1.2313497  -0.02323302 -1.2081169 ]\n",
+      "   [ 1.2486433  -0.06061375 -1.1880296 ]]\n",
+      "\n",
+      "  ...\n",
+      "\n",
+      "  [[ 1.0735524   0.25765258 -1.3312051 ]\n",
+      "   [ 1.0202008   0.33690354 -1.3571047 ]\n",
+      "   [ 0.9418953   0.44165438 -1.3835492 ]\n",
+      "   ...\n",
+      "   [ 1.0318679   0.31749782 -1.3493658 ]\n",
+      "   [ 1.2230949  -0.01652831 -1.2065667 ]\n",
+      "   [ 1.259511   -0.12110683 -1.1384043 ]]\n",
+      "\n",
+      "  [[ 1.211566    0.01938549 -1.2309504 ]\n",
+      "   [ 1.1165073   0.19122499 -1.3077322 ]\n",
+      "   [ 1.0006316   0.36386612 -1.3644977 ]\n",
+      "   ...\n",
+      "   [ 1.1328607   0.16183724 -1.2946981 ]\n",
+      "   [ 1.2613413  -0.09009596 -1.1712457 ]\n",
+      "   [ 1.2951652  -0.18033943 -1.1148256 ]]\n",
+      "\n",
+      "  [[ 1.2502782  -0.06650416 -1.1837744 ]\n",
+      "   [ 1.2417939  -0.0439573  -1.1978368 ]\n",
+      "   [ 1.1350548   0.15837975 -1.2934349 ]\n",
+      "   ...\n",
+      "   [ 1.1516423   0.12796025 -1.2796025 ]\n",
+      "   [ 1.2133455   0.01213345 -1.2254786 ]\n",
+      "   [ 1.2932206  -0.17348082 -1.1197399 ]]]], shape=(1, 32, 32, 3), dtype=float32)\n"
+     ]
+    }
+   ],
    "source": [
     "layernorm = MyLayerNorm()\n",
     "\n",
